# portnomic-app

./: .env.example  .env.production.example  .gitignore  README.md  SHIPFLOW_AI_Engineering_Design_Document.md  SHIPFLOW_AI_Enterprise_Technical_Specification_40_60_Pages_v3.0.docx  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod-simple.yml  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  package-lock.json  package.json  skills-lock.json
.agents/: AGENTS.md  (+7 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260303_performance_indexes_and_gdpr.py  20260304_add_mail_connections.py  20260307_add_tenant_subscription_fields.py  20260308_add_anomaly_and_vessel_fuel_types.py  20260308_add_emission_reports.py  20260308_add_tenant_llm_configs.py  (+14 more)
backend/app/: clear_discrepancies.py  config.py  database.py  emission_constants.py  fill_port_coordinates.py  main.py  permissions_manifest.py  redis_client.py  resilience.py  run_sentinel_audit.py  seed.py  seed_leakage.py  seed_marketing.py  seed_sentinel.py  telemetry.py  test_aisstream_connection.py  worker.py
backend/docs/: emission-extraction-schema.md
backend/scripts/: check_anomalies.py
backend/tests/: conftest.py  test_ais_client.py  test_ais_normalizer.py  test_audit_engine.py  test_audit_service.py  test_emission_anomaly.py  test_encryption.py  test_formula_engine.py  test_leakage_audit_trigger.py  test_parse_worker.py  test_pdf_generator.py  test_sentinel_audit_trigger.py  test_tenant_isolation.py  test_tenant_llm_config_svc.py  test_time_overlap.py  test_timeline_event_normalization.py  test_vessel_filter.py
(+483 files in other folders)
